[package]
name = "movinight"
version = "1.0.0"
description = "MoviNight - A modern movie and TV show discovery application built with Tauri. Search, discover, and manage your watchlist with TMDB integration."
authors = ["mahostar"]
license = "MIT"
repository = "https://github.com/mahostar/movinight"
keywords = ["movies", "tv-shows", "entertainment", "tauri", "tmdb"]
categories = ["multimedia", "entertainment"]
edition = "2021"


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "movinight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
thiserror = "1.0"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

